# boltz2_aff

./: .gitignore  AGENTS.md  README.md  affinity_embeddings_mol_01.npz  affinity_embeddings_mol_03.npz  affinity_embeddings_mol_04.npz  affinity_embeddings_mol_05.npz  affinity_embeddings_mol_07.npz  affinity_embeddings_mol_10.npz  affinity_embeddings_mol_11.npz  affinity_embeddings_mol_14.npz  affinity_embeddings_mol_15.npz  affinity_embeddings_mol_16.npz  affinity_embeddings_mol_19.npz  affinity_embeddings_mol_21.npz  affinity_embeddings_mol_23.npz  affinity_embeddings_mol_26.npz  affinity_embeddings_mol_33.npz  affinity_embeddings_mol_37.npz  affinity_embeddings_mol_39.npz  affinity_embeddings_mol_43.npz  affinity_embeddings_mol_49.npz  affinity_embeddings_mol_50.npz  affinity_embeddings_mol_51.npz  affinity_embeddings_mol_53.npz  affinity_embeddings_mol_56.npz  affinity_embeddings_mol_59.npz  affinity_embeddings_mol_61.npz  affinity_embeddings_mol_62.npz  affinity_embeddings_mol_64.npz  affinity_embeddings_mol_67.npz  affinity_embeddings_mol_69.npz  context.md  pyproject.toml
ROCK1/: affinity_embeddings_mol_13.npz  affinity_embeddings_mol_22.npz  affinity_embeddings_mol_25.npz  affinity_embeddings_mol_29.npz  affinity_embeddings_mol_45.npz  affinity_embeddings_mol_46.npz  affinity_embeddings_mol_47.npz  affinity_embeddings_mol_52.npz  affinity_embeddings_mol_55.npz  affinity_embeddings_mol_57.npz  affinity_embeddings_mol_68.npz
boltz2_aff/: __init__.py  data.py  features.py  modeling.py  peptide_pipeline.py  pipeline.py
docs/: peptide_systems_log.md
(+5216 files in other folders)
