[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "boltz2-aff"
version = "0.1.0"
description = "Model ULVSH affinities from Boltz-2 affinity-module embeddings."
requires-python = ">=3.10"
dependencies = [
  "joblib",
  "numpy",
  "pandas",
  "rdkit>=2026.3.2",
  "scikit-learn",
  "scipy",
]

[tool.setuptools.packages.find]
include = ["boltz2_aff*"]

[project.scripts]
boltz2-affinity = "boltz2_aff.pipeline:main"
